# NetworkingPlayground

./: .gitignore  README.md
NetworkingPlayground/: NetworkingPlayground.sln
NetworkingPlayground/ObjectSerialization/: ByteSwapper.h  ISerializableObject.h  InputMemoryStream.cpp  InputMemoryStream.h  Main.cpp  NaivelySerialization.h  NetConnectionSimulator.h  ObjectSerialization.vcxproj  ObjectSerialization.vcxproj.filters  OutputMemoryStream.cpp  OutputMemoryStream.h  RoboCat.cpp  RoboCat.h  StreamTypes.h
NetworkingPlayground/ObjectSerialization/Generator/: CMakeGenerator.bat  CMakeLists.txt  Utilities.cmake  vscodeSetup.sh  win_gcc.bat
NetworkingPlayground/ObjectSerialization/Source/Code/ObjectSerialization/: ByteSwapper.h  ISerializableObject.h  Main.cpp  NaivelySerialization.h  NetConnectionSimulator.cpp  NetConnectionSimulator.h  RoboCat.cpp  RoboCat.h
NetworkingPlayground/ObjectSerialization/Source/Code/ObjectSerialization/Config/: Testable.h
NetworkingPlayground/ObjectSerialization/Source/Code/ObjectSerialization/Streams/: DeprecatedOutputMemoryBitStream.cpp  DeprecatedOutputMemoryBitStream.h  InputMemoryStream.cpp  InputMemoryStream.h  Int2Type.h  OutputMemoryBitStream.cpp  OutputMemoryBitStream.h  OutputMemoryBitStream2.cpp  OutputMemoryBitStream2.h  OutputMemoryStream.cpp  OutputMemoryStream.h  StreamTypes.h
NetworkingPlayground/ObjectSerialization/Source/Code/Tools/ConstMath/: ConstMath.h
NetworkingPlayground/ObjectSerialization/Source/Code/Tools/Profiler/: Timer.cpp  Timer.h
NetworkingPlayground/ObjectSerialization/Source/Tests/: MockSerializableObject.cpp  MockSerializableObject.h
NetworkingPlayground/ObjectSerialization/Source/Tests/Streams/: BitStreamTests.cpp  ByteStreamTests.cpp
